# Alias-Heaven-Calculator

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.toml
assets/: icon.kra
src/: calculator.rs  main.rs
